Dark theme support; i18n support

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
     "expo": "~36.0.0",
+    "expo-localization": "^8.0.0",
+    "i18n-js": "^3.5.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-appearance": "^0.3.2",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
