--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "displayName": "Ololo",
   "expo": {
     "name": "Ololo",
-    "slug": "expo-template-bare",
+    "slug": "ololo",
     "privacy": "unlisted",
     "sdkVersion": "36.0.0",
     "version": "1.0.0",
