--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Ololo",
-  "displayName": "Ololo",
+  "name": "ololo",
+  "displayName": "ololo",
   "expo": {
-    "name": "Ololo",
+    "name": "ololo",
     "slug": "expo-template-bare",
     "privacy": "unlisted",
     "sdkVersion": "36.0.0",
