--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
+    "date-fns": "^2.9.0",
     "expo": "~36.0.0",
     "expo-localization": "^8.0.0",
     "i18n-js": "^3.5.1",
