--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "~0.61.4",
     "react-native-appearance": "^0.3.2",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-markdown-display": "^5.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
