Use updated versions of GHAction scripts

--- a/.github/workflows/format_prettier.yml
+++ b/.github/workflows/format_prettier.yml
@@ -8,7 +8,9 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - uses: actions/checkout@v1
+        - uses: actions/checkout@v2
+          with:
+            ref: ${{ github.head_ref }}
         - name: Use Node.js v10.x
           uses: actions/setup-node@v1
           with:
@@ -20,9 +22,9 @@ jobs:
             yarn install
             yarn run prettier --write 'src/**/*.{tsx,js}'
 
-        - uses: stefanzweifel/git-auto-commit-action@v2.1.0
+        - uses: stefanzweifel/git-auto-commit-action@v2.5.0
           with:
-              commit_message: Apply prettier changes
-              branch: ${{ github.head_ref }}
+            commit_message: Apply php-cs-fixer changes
+            branch: ${{ github.head_ref }}
           env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
