--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~36.0.0",
     "expo-localization": "^8.0.0",
     "i18n-js": "^3.5.1",
+    "lottie-react-native": "2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
