--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-appearance": "^0.3.2",
+    "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-markdown-display": "^5.1.0",
     "react-native-reanimated": "^1.4.0",
