--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.6",
+    "@apollo/react-hooks": "^3.1.3",
+    "@react-native-community/masked-view": "0.1.5",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
     "date-fns": "^2.9.0",
     "expo": "~36.0.0",
     "expo-localization": "^8.0.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.1",
     "i18n-js": "^3.5.1",
     "lottie-react-native": "2.6.1",
     "react": "~16.9.0",
