--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "apollo-link-http": "^1.5.16",
     "date-fns": "^2.9.0",
     "expo": "~36.0.0",
+    "expo-facebook": "^8.0.0",
     "expo-haptics": "^8.0.0",
     "expo-localization": "^8.0.0",
+    "firebase": "^7.8.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
     "i18n-js": "^3.5.1",
