--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-appearance": "^0.3.2",
+    "react-native-btr": "^1.1.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-markdown-display": "^5.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg": "^11.0.1",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
