--- a/package.json
+++ b/package.json
@@ -22,24 +22,26 @@
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
     "i18n-js": "^3.5.1",
+    "lodash": "^4.17.15",
     "lottie-react-native": "2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-appearance": "^0.3.2",
-    "react-native-btr": "^1.1.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-markdown-display": "^5.1.0",
     "react-native-reanimated": "^1.4.0",
+    "react-native-redash": "^9.6.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-svg": "^11.0.1",
+    "react-native-svg": "9.13.3",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-hooks": "^1.1.0",
-    "react-navigation-stack": "^2.0.12"
+    "react-navigation-stack": "^2.0.12",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.18"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
