--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "apollo-link-http": "^1.5.16",
     "date-fns": "^2.9.0",
     "expo": "~36.0.0",
-    "expo-camera": "^8.0.0",
+    "expo-barcode-scanner": "^8.0.0",
     "expo-facebook": "^8.0.0",
     "expo-haptics": "^8.0.0",
     "expo-localization": "^8.0.0",
