--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-markdown-display": "^5.1.0",
+    "react-native-qrcode-svg": "^6.0.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-redash": "^9.6.0",
     "react-native-safe-area-context": "0.6.0",
